feat:rebuild header, add pages

--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -1,29 +1,31 @@
 <nav class="navbar bg-base-100 shadow-md">
-          <div class="flex-1">
-            <a class="btn btn-ghost text-xl" href="/">JS CheatSheet</a>
-          </div>
-          <div class="flex-2">
-            <ul class="menu menu-horizontal px-1">
-              <li><a href="/">Accueil</a></li>
-              <li>
-                <details>
-                  <summary>Leçons</summary>
-                  <ul class="bg-base-100 rounded-t-none p-2">
-                    <li><a href="/src/pages/lessons/variables.html">Variables</a></li>
-                  </ul>
-                </details>
-              </li>
-              
-              <li>
-                <details>
-                  <summary>Exercices</summary>
-                  <ul class="bg-base-100 rounded-t-none p-2">
-                    <li><a href="/src/pages/exercices/variables.html">Variables</a></li>
-                  </ul>
-                </details>
-              </li>
-              <li><a href="#">TP</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
+  <div class="flex-1">
+    <a class="btn btn-ghost text-xl" href="/">JS CheatSheet</a>
+  </div>
+  <div class="flex-2">
+    <ul class="menu menu-horizontal px-1">
+      <li><a href="/">Accueil</a></li>
+      <li>
+        <details>
+          <summary>Leçons</summary>
+          <ul class="bg-base-100 rounded-t-none p-2">
+            <li><a href="/src/pages/lessons/variables.html">Variables</a></li>
+            <li><a href="/src/pages/lessons/numbers.html">Nombres et calculs</a></li>
+            <li><a href="/src/pages/lessons/strings.html">Strings</a></li>
+          </ul>
+        </details>
+      </li>
+      
+      <li>
+        <details>
+          <summary>Exercices</summary>
+          <ul class="bg-base-100 rounded-t-none p-2">
+            <li><a href="/src/pages/exercices/variables.html">Variables</a></li>
+          </ul>
+        </details>
+      </li>
+      <li><a href="#">TP</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
 </nav>
